# build-rs-example

./: Cargo.toml  README.md  build.rs  config.json
src/: main.rs
