[package]
name = "build-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }

[build-dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82" }


